unpackaged/main/default/objects/ERS_Payment_Region__mdt/ERS_Payment_Region__mdt.object-meta.xml
<CustomObject>
    <label>ERS Payment Region</label>
    <pluralLabel>ERS Payment Regions</pluralLabel>
</CustomObject>