unpackaged/main/default/objects/ERS_Payment_Region__mdt/fields/Branch_Id__c.field-meta.xml
<CustomField>
    <fullName>Branch_Id__c</fullName>
    <label>Branch ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <default>true</default>
                <label>01</label>
            </value>
            <value>
                <fullName>02</fullName>
            </value>
            <value>
                <fullName>03</fullName>
            </value>
            <value>
                <fullName>04</fullName>
            </value>
            <value>
                <fullName>05</fullName>
            </value>
            <value>
                <fullName>06</fullName>
            </value>
            <value>
                <fullName>07</fullName>
            </value>
            <value>
                <fullName>08</fullName>
            </value>
            <value>
                <fullName>09</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>22</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>80</fullName>
            </value>
            <value>
                <fullName>81</fullName>
            </value>
            <value>
                <fullName>82</fullName>
            </value>
            <value>
                <fullName>83</fullName>
            </value>
            <value>
                <fullName>84</fullName>
            </value>
            <value>
                <fullName>85</fullName>
            </value>
            <value>
                <fullName>86</fullName>
            </value>
            <value>
                <fullName>88</fullName>
            </value>
            <value>
                <fullName>89</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>91</fullName>
            </value>
            <value>
                <fullName>92</fullName>
            </value>
            <value>
                <fullName>93</fullName>
            </value>
            <value>
                <fullName>94</fullName>
            </value>
            <value>
                <fullName>95</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>